@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11601 2012/10/13 00:58:52 taca Exp $
+$NetBSD: TODO,v 1.11604 2012/10/14 18:06:49 wiz Exp $
 
 Suggested new packages
 ======================
@@ -341,6 +341,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o DatUtil-2.45
 	o GMT-4.2.1
 	o GUIlib-1.1.2
+	o GraphicsMagick-1.3.17
 	o MAMEDiff-2.30
 	o Mesa-9.0
 	o MesaLib-9.0
@@ -551,7 +552,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o epic4-2.6
 	o epiphany-extensions-3.2.0
 	o epstool-3.08
-	o eric5-5.2.5
+	o eric5-5.2.6
 	o esh-0.8.5
 	o espeak-1.40
 	o et-2.60
@@ -560,7 +561,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o etm-891
 	o ettercap-0.7.4
 	o eukleides-1.5.4
-	o evince-3.4.0
+	o evince-3.6.0
 	o evolution-3.0.0
 	o evolution-couchdb-0.4.5
 	o evolution-exchange-2.32.2
@@ -612,6 +613,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o gcin-1.5.5
 	o gcombust-0.1.55
 	o gcpio-2.10
+	o gdal-1.9.2
 	o gdb-7.5
 	o gdeskcal-1.01
 	o gdl-2.30.1 [GNOME 2.32]
@@ -667,6 +669,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o gnucash-docs-2.4.1
 	o gnuchess-6.0.1
 	o gnutls-3.1.2 [needs nettle-2.5]
+	o gnutls-3.1.3
 	o gok-2.30.1 [GNOME 2.32]
 	o golem-0.0.6
 	o goocanvas-2.0
@@ -819,7 +822,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o liblbxutil-1.1.0
 	o libltdl-2.4.2
 	o libmcs-0.7.2
-	o libmemcached-1.0.11
+	o libmemcached-1.0.12
 	o libmms-0.6.2
 	o libmilter-8.14.5
 	o libnasl-2.3.1
@@ -857,6 +860,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o lua-5.2.1
 	o lwm-1.2.2
 	o lyx-2.0.3
+	o m17n-db-1.6.4
+	o m17n-lib-1.6.4
 	o maelstrom-sdl-3.0.6
 	o maelstrom-x11-2.0.7
 	o mailgraph-1.14
@@ -1022,6 +1027,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o puzzle-9173
 	o puzzles-9682
 	o pv-1.2.0
+	o pvs-5.0
 	o pwlib-1.11.1
 	o py-HappyDoc-3.0
 	o py-Scientific-doc-2.5.5
@@ -1230,7 +1236,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o windowlab-1.40
 	o windowmaker-0.95.2 [wip]
 	o wine-1.4.1 [wait until NetBSD gains OSS 4 or bring OSS 3 support back]
-	o wine-devel-1.5.14 [wait until NetBSD gains OSS 4 or bring OSS 3 support back]
+	o wine-devel-1.5.15 [wait until NetBSD gains OSS 4 or bring OSS 3 support back]
 	o wmi-11
 	o wml-2.0.11
 	o wmnd-0.4.13
@@ -1244,7 +1250,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o wxRemind-101
 	o wyrd-1.4.4 [pkg/43792]
 	o wyrd-1.4.5
-	o x264-devel-20121006
+	o x264-devel-20121013
 	o xanalyser-1.30
 	o xaric-0.13.2
 	o xbindkeys-1.8.5
@@ -1276,7 +1282,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xf86-video-glint-1.2.8
 	o xf86-video-i128-1.3.6
 	o xf86-video-i740-1.3.4
-	o xf86-video-intel-2.20.9
+	o xf86-video-intel-2.20.10
 	o xf86-video-mach64-6.9.3
 	o xf86-video-mga-1.6.2
 	o xf86-video-neomagic-1.2.7
@@ -1326,7 +1332,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xmule-1.12.2
 	o xnap-2.5r3
 	o xorp-1.8.5
-	o xosview-1.10
+	o xosview-1.11
 	o xpaint-2.9.9
 	o xpr-1.0.4 [unpackaged]
 	o xpuyopuyo-0.9.8
