@@ -1,17 +1,18 @@
-# $NetBSD$
-# TeX Live Revision 13822
+# $NetBSD: Makefile,v 1.1.1.1 2010/02/08 20:18:06 minskim Exp $
 
 DISTNAME=	collection-documentation-base-doc
-PKGNAME=	tex-${DISTNAME}-2009
+PKGNAME=	tex-${DISTNAME}-2012
 CATEGORIES=	print
 MASTER_SITES=	# empty
+TEXLIVE_REV=	17091
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://www.tug.org/texlive/
 COMMENT=	TeX Live documentation
 
-DEPENDS+=	tex-texlive-common-doc>=2009:../../print/tex-texlive-common-doc
-DEPENDS+=	tex-texlive-en-doc>=2009:../../print/tex-texlive-en-doc
+DEPENDS+=	tex-texlive-common-doc>=2012:../../print/tex-texlive-common-doc
+DEPENDS+=	tex-texlive-docindex-doc>=2012:../../print/tex-texlive-docindex-doc
+DEPENDS+=	tex-texlive-en-doc>=2012:../../print/tex-texlive-en-doc
 
 META_PACKAGE=	yes
 
