@@ -11,4 +11,5 @@ share/texmf/doc/texlive/texlive-common/stdcoll.png
 share/texmf/doc/texlive/texlive-common/tlmgr-general-options.png
 share/texmf/doc/texlive/texlive-common/tlmgr-gui.png
 share/texmf/doc/texlive/texlive-common/tlmgr-paper-options.png
+share/texmf/doc/texlive/texlive-common/tray-menu.png
 share/texmf/doc/texlive/texlive-common/wizard-w32.png
