@@ -1,0 +1,1 @@
+This is documentation for tex-texlive-docindex.
