@@ -1,0 +1,2 @@
+@comment $NetBSD$
+share/doc/texlive/doc.html
