@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (tex-texlive-docindex-27926/texlive-docindex.doc.tar.xz) = 8d21e10e08cae2292c502074ebd56d81b6063b26
+RMD160 (tex-texlive-docindex-27926/texlive-docindex.doc.tar.xz) = fdbf6a8fac93759891d99cd627b0d7e9e6f6b151
+Size (tex-texlive-docindex-27926/texlive-docindex.doc.tar.xz) = 86276 bytes
