@@ -1,0 +1,2 @@
+This package provides the top-level TeX Live doc.html and other
+support files.
