@@ -1,0 +1,13 @@
+# $NetBSD$
+
+DISTNAME=	texlive-docindex
+PKGNAME=	tex-${DISTNAME}-2012
+TEXLIVE_REV=	27926
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Top-level TeX Live doc.html, etc
+
+TEX_TEXMF_DIRS=	${PREFIX}/share/texmf
+
+.include "../../print/texlive/package.mk"
+.include "../../mk/bsd.pkg.mk"
