@@ -1,0 +1,2 @@
+@comment $NetBSD$
+share/texmf/scripts/texlive/var/texcatalogue.keywords
