@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (tex-texlive-docindex-27926/texlive-docindex.tar.xz) = 33d4d89493f6f62ad476f75c5653917ec8ecd56c
+RMD160 (tex-texlive-docindex-27926/texlive-docindex.tar.xz) = 10838d544cdf93a2ada6c3c308ca427e64fefe15
+Size (tex-texlive-docindex-27926/texlive-docindex.tar.xz) = 109096 bytes
