@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2010/10/26 23:42:25 minskim Exp $
+@comment $NetBSD$
 share/texmf/doc/texlive/texlive-en/Makefile
 share/texmf/doc/texlive/texlive-en/README
 share/texmf/doc/texlive/texlive-en/archive/bv-live.tex
@@ -12,6 +12,7 @@ share/texmf/doc/texlive/texlive-en/archive/live-2007.tex
 share/texmf/doc/texlive/texlive-en/archive/live-2008.tex
 share/texmf/doc/texlive/texlive-en/archive/live-2009.tex
 share/texmf/doc/texlive/texlive-en/archive/live-2010.tex
+share/texmf/doc/texlive/texlive-en/archive/live-2011.tex
 share/texmf/doc/texlive/texlive-en/archive/live-tl7.tex
 share/texmf/doc/texlive/texlive-en/archive/live4ht.cfg-2004
 share/texmf/doc/texlive/texlive-en/archive/mod.pl
