@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.3 2011/01/22 23:27:46 minskim Exp $
+$NetBSD: distinfo,v 1.4 2011/04/20 19:08:10 minskim Exp $
 
-SHA1 (tex-texlive-en-21569/texlive-en.doc.tar.xz) = 528b1dc687c1b8befe419fbbf0f823bf89b9d8ae
-RMD160 (tex-texlive-en-21569/texlive-en.doc.tar.xz) = d83afa99ab1f9789d0d9e2dc06bd23cd6c685441
-Size (tex-texlive-en-21569/texlive-en.doc.tar.xz) = 1115716 bytes
+SHA1 (tex-texlive-en-26703/texlive-en.doc.tar.xz) = 33f852fd45c83c132b1e247ce351e9de5b023025
+RMD160 (tex-texlive-en-26703/texlive-en.doc.tar.xz) = 95cc350e5678b40a15f66df3b855b8433896ed88
+Size (tex-texlive-en-26703/texlive-en.doc.tar.xz) = 1034800 bytes
