@@ -1,4 +1,7 @@
-$NetBSD$
+$NetBSD: patch-ab,v 1.5 2012/02/13 12:29:12 drochner Exp $
+
+Do not install XEmacs mode for editing desktop files.
+(If you want it, make a separate package for it.)
 
 --- Makefile.in.orig	2011-12-20 15:09:44.000000000 +0000
 +++ Makefile.in
