@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3254 2012/10/13 22:51:48 minskim Exp $
+$NetBSD: CHANGES-2012,v 1.3261 2012/10/14 18:06:49 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5059,3 +5059,11 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated print/tex-kpathsea to 2012 [minskim 2012-10-13]
 	Updated print/tex-kpathsea-doc to 2012 [minskim 2012-10-13]
 	Updated emulators/vmips to 1.4 [shattered 2012-10-13]
+	Updated net/filezilla to 3.5.0nb12 [wiz 2012-10-14]
+	Updated print/tex-texlive-common-doc to 2012 [minskim 2012-10-14]
+	Updated print/tex-texlive-en-doc to 2012 [minskim 2012-10-14]
+	Added print/tex-texlive-docindex version 2012 [minskim 2012-10-14]
+	Added print/tex-texlive-docindex-doc version 2012 [minskim 2012-10-14]
+	Updated print/tex-collection-documentation-base-doc to 2012 [minskim 2012-10-14]
+	Updated graphics/libotf to 0.9.13 [wiz 2012-10-14]
+	Updated sysutils/desktop-file-utils to 0.21 [wiz 2012-10-14]
